2009-07-24  Jérôme Lodewyck <lodewyck@users.sourceforge.net>

	* qtterminal/qt_term.cpp: use locale config macros

	* qtterminal/QtGnuplotWindow.cpp: remove the "export to EPS" option.

	* qtterminal/QtGnuplotWidget.cpp: terminal size option is now working
	Changed the default background color from red to white.

	* qtterminal/QtGnuplotScene.cpp: clip the zoom rect on half integer
	coordinates.

	* qtterminal/QtGnuplotInstance.cpp qtterminal/embed_example.cpp: update the
	embed example to follow the new size policy.


2009-07-23  James R. Van Zandt  <jrvz@comcast.net>

	* src/mouse.c (event_buttonpress): Reimplement pan and zoom with
	mouse wheel to use axis_array[].min and .max directly, without
	using the mouse position.  Extend pan and zoom to 3D plots.  Add
	documentation and help printout.

2009-07-20  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/win/winmain.c: enable load of the correct .ico symbol for the
	plotting window within win.trm; LoadIcon(graphwin.hInstance, "GRPICON")
	fails if graphwin.hInstance equals NULL.
	Patch #1627936

2009-07-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (store2d_point):  If the plot uses palette colors taken
	from the Z coordinate, then also use Z to auto-scale cbrange.
	Bug #2133407

2009-07-19  Jérôme Lodewyck <lodewyck@users.sourceforge.net>

	Add a Qt terminal, which can either act as a standalone interactive
	terminal window or be embedded in an external Qt application.

	* configure.in docs/Makefile.in src/Makefile.am src/makefile.all
	src/makefile.awc src/term.c src/term.h ./term/qt.trm

	* qtterminal/*
	Makefile.am QtGnuplotApplication.cpp QtGnuplotApplication.h
	QtGnuplotEvent.cpp QtGnuplotEvent.h QtGnuplotInstance.cpp
	QtGnuplotInstance.h QtGnuplotItems.cpp QtGnuplotItems.h
	QtGnuplotResource.qrc QtGnuplotScene.cpp QtGnuplotScene.h
	QtGnuplotSettings.ui QtGnuplotWidget.cpp QtGnuplotWidget.h
	QtGnuplotWindow.cpp QtGnuplotWindow.h 
	qt_conversion.cpp qt_term.cpp qt_term.h